Allow all to open all files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,7 @@
             <!-- for .docx -->
         <item>application/msword</item>
             <!-- for .doc -->
+        <item>*/*</item>
+            <!-- for debugging -->
     </string-array>
 </resources>
